Spacing and font fixes

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -5,7 +5,7 @@ body {
   background-color: rgb(45,45,45);
   padding:12px;
   padding-top:24px;
-  font: 14px serif;
+  font: 13px serif;
   font-weight:500;
   letter-spacing: 0.35px;
   background-image: url('../../assets/img/background.png');
